removed auto dark mode functionality because of bug

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,7 +52,7 @@ a {
   color: var(--button-primary-active);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -60,7 +60,7 @@ a {
     color: white;
     background: black;
   }
-}
+} */
 
 @keyframes move{
   0%{
